Update Basic pytyhon problems.ipynb

--- a/Basic pytyhon problems.ipynb
+++ b/Basic pytyhon problems.ipynb
@@ -190,7 +190,7 @@
     "\n",
     "\n",
     "\n",
-    "When not on vacation, on weekdays, the alarm should ring at '7:00' and on the weekends (Saturday and Sunday), it should ring at '10:00'.\n",
+    "When not on vacation, on weekdays, the alarm should rig at '7:00' and on the weekends (Saturday and Sunday), it should ring at '10:00'.\n",
     "\n",
     "\n",
     "\n",
@@ -272,7 +272,7 @@
     "\n",
     "\n",
     "\n",
-    "In this question, you have to make a function that will take an integer as input and return the factorial of that integer if that integer is greater than or equal to zero and return -1 if the number is less than zero or negative."
+    "In this question, you have to make a function that will take an inteer as input and return the factorial of that integer if that integer is greater than or equal to zero and return -1 if the number is less than zero or negative."
    ]
   },
   {
